fix: font-size on mobile version

--- a/styles/style.css
+++ b/styles/style.css
@@ -736,6 +736,11 @@ body {
   box-shadow: 0px 0px 48px #c07b3e;
   transition: all 1s ease;
 }
+@media (width < 737px) {
+  .section-1__article-2--h3{
+    font-size: 2rem;
+  }
+}
 
 /* FOOTER */
 
